--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,8 @@ body {
     height: 1500px;
     background-color: white;
     margin: auto;
-}
-
-.container {
     padding-left: 50px;
-} 
+}
 
 /* CSS Bottoni */
 .bottone {
@@ -52,7 +49,9 @@ body {
 }
 
 #divisore {
-    margin-left: 0;
+    margin-left: -50px;
+    background-color: #F6F8F9;
+
 }
 
 .sottotitolo {
@@ -124,9 +123,6 @@ h3 {
     background-color: lightgreen;
 }
 
-.container_sottotitolo {
-    display: block;
-}
 
 /* CSS Icone */
 .spunta_verde {
